modules/ballerina-core/src/test/resources/samples/parser/invalidSyntax/testXML.bal
function foo() {
  xml x1 = <foo> hello world </foo>;
}
